v0.14
- add new gvcf variant merging tool
v0.13
- change all tools to handle longer vcf input lines by modifying istream_splitter
v0.12
- gatk_to_gvcf: add option to turn off non-variant block compression
v0.11
- gatk_to_gvcf: handle full genome input (instead of chrom-at-a-time)
- gatk_to_gvcf: add runtime gVCF block stringency controls 
- trio/twins: specify filter for any numeric info field key from the
command-line
v0.10
- trio/twins: tolerate missing value '.' in GQX field
- twins: fix chromosome iteration when no region is provided
- fix header for shr tool
- add simple variant extraction tool
v0.9
- trio/twins: cut runtime by ~70% for baseline case
- set_haploid_region: fix reference correction for divided blocks
- added new break_blocks tool
v0.8
- gatk_to_gvcf: additional fixes to output based on vcf-validator feedback
- add new set_haploid_region tool
v0.7
- gatk_to_gvcf: Fix invalid vcf header
- Improve visual studio c++ compatability
v0.6
- gatk_to_gvcf: Tweak non-reference allele fraction filter to use unfiltered depth.
- Update version number using git-describe when source is compiled directly from
git repo.
v0.5
- Added gatk gVCF block compress tool
v0.4
- twins: fix twins to handle flipped genotype order
v0.3
- trio/twins: fix issue with overlapping site call handling in murdock mode, affecting mapped site counts
v0.2
- trio/twins: fix issue with counts of sites mapped or partially called
v0.1
- First preview release of trio/twins tools